--- a/src/config/.env.prod
+++ b/src/config/.env.prod
@@ -1,5 +1,5 @@
-DB_HOST=13.124.53.30
+DB_HOST=ball1-db.cimcenmgl8a8.ap-northeast-2.rds.amazonaws.com
 DB_PORT=3306
-DB_USERNAME=hongjinhyeok
+DB_USERNAME=admin
 DB_PASSWORD=Gonnabea1right!
-DB_DATABASE=chaining_prod
+DB_DATABASE=ball1_db_prod
